Fix card focus outlines on Safari

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -75,6 +75,11 @@
 	&:focus-within {
 		& img {
 			outline: 3px solid $purple-3;
+
+			@include safari-only {
+				outline: 3px solid transparent;
+				border: 3px solid $purple-3;
+			}
 		}
 	}
 
