--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -102,3 +102,11 @@
     cursor: pointer;
     outline: inherit;
 }
+
+@mixin safari-only {
+	@media not all and (min-resolution:.001dpcm) {
+		@supports (-webkit-appearance:none) {
+			@content;
+		}
+	}
+}
